kubernetes/components/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-proxy-config
              mountPath: /etc/nginx/conf.d/transit_proxy.conf
              subPath: transit_proxy.conf
            - name: self-signed-cert
              mountPath: /etc/nginx/certs
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: nginx-proxy-config
          configMap:
            name: nginx-config
            items:
              - key: transit_proxy.conf
                path: transit_proxy.conf
        - name: self-signed-cert
          secret:
            secretName: self-signed-cert
